--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "npx webpack",
     "deploy": "node gh-pages.js --exit",
-    "publish": "npm run build && node gh-pages.js --exit",
+    "publish": "npm run build -p && node gh-pages.js --exit",
     "start": "webpack serve --mode development --open",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
