--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "webpack": "^5.44.0",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2"
+  },
+  "dependencies": {
+    "encoderr": "^1.0.0"
   }
 }
